adicionado cucumber